# Blossom

./: .gitignore  README.md  index.theme
apps/: README.md  install.sh
apps/btop/: blossom.theme
apps/discord/: blossom.theme.css
apps/ghostty/: Blossom
apps/gtksourceview/: blossom.xml
apps/kitty/: blossom.conf
apps/obsidian/: blossom.css
apps/qt/: Blossom.conf
apps/spotify/Blossom/: color.ini
blob-emojis/: 75-blobmoji.conf  README.md  install.sh
cinnamon/: cinnamon.css
docs/: SESSION-HANDOFF.md
gtk-2.0/: apps.rc  gtkrc  menubar-toolbar-dark.rc  panel.rc
gtk-3.0/: gtk.css
gtk-4.0/: gtk.css
icons/Blossom/: index.theme
libadwaita-1.5/: base-hc.css  base.css  defaults-dark.css  defaults-light.css
libadwaita-1.7/: base-hc.css  base.css  defaults-dark.css  defaults-light.css
metacity-1/: metacity-theme-2.xml
openbox-3/: themerc
packaging/: build-packages.sh
steam/: README.md  gen-store.py  generated.css  install.sh  store.css  theme.json  webkit.css
steam/blossom-steam/: Cargo.toml
steam/blossom-steam/src/: main.rs
tools/: blossom-control.desktop  blossom-control.py  blossom-glow.py  blossom-rotate.py  blossom_icons.py  blossomize.py  panel-setup.sh
tools/emote/: gtk.css
wm/: blossom-xmonad.desktop  install.sh  picom.conf
wm/xmobar/: xmobarrc
wm/xmonad/: xmonad.hs
xfwm4/: themerc
